fixed mobile about page with img + text on grid overlapping
issue: overlap caused by img and text on about page because overflow: clip did not work on mobile device and behaved like overflow: hidden. this caused overlap of the two divs. resolution: change the display from grid back to block on smaller window dimensions (mobile included) to revert back to normal layout flow.

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -16,7 +16,7 @@
     min-width: 300px;
     max-width: 350px;
     border-radius: 50%;
-    overflow: clip;
+    overflow: hidden;
     display:block;
 
     .profile-pic {
@@ -78,8 +78,7 @@
 @media only screen and (max-width: 1200px) {
   .about-page {
     overflow: scroll;
-    grid: 1fr / 1fr;
-    gap: 20px;
+    display: block;
   }
 }
 
