--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -15,6 +15,7 @@
     background-color: var(--text-alt-color);
     width: 100%;
     box-sizing: border-box;
+    border-radius: 10px;
 
     ul {
       padding: 0;
